# pong_rl

./: .gitignore  README.md  notes.md  proposal.md  pyproject.toml  q_table.ipynb
dev_log/: dev_log.md  notes.md
pong_rl/: cartpole_dqn.py  dqn.py  pong_dqn.py  train_funcs.py
pong_rl/a2c/: cartpole.py
pong_rl/dqn/: cartpole.py  pong.py  q_table.ipynb
pong_rl/policy_gradients/: cartpole.py  policy_gradients.py
pong_rl/ppo/: cartpole.py
